Updated the tables

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -251,7 +251,7 @@ font-weight: 700;
 }
 .sidebar-collapse .nav > li > a {
 	color:#fff;
-	background:#4286f4;
+	background:#0A0A0A;
 	text-shadow:none;
 	
 }
